--- a/leeme.html
+++ b/leeme.html
@@ -4,40 +4,42 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<h1>Iw-Base</h1>
-
-Este es un leeme.html de ejemplo, pensado para que lo modifiques para tu proyecto. Cambia el encabezado (h1), y lista los integrantes de tu grupo, y en general actualízalo para hacerlo tuyo.
-
+<h1>OngO</h1>
 <h2>Integrantes</h2>
 
 <ul>
-    <li>María Ejémplez Pérez</li>
-    <li>José Pérez Ejémplez</li>
+    <li>Javier Martín Villarreal</li>
 </ul>
 
 <h2>Proyecto</h2>
 
-Copia y pega aquí el texto de la última versión de proyecto.
+OngO es una web para gestionar tus rutas: visitas a tus clientes, a museos, rutas turísticas compartidas con amigos, todo esto y mas con las facilidades de escanear los destinos con 
+códigos QR y poder generar y descargar detalladamente PDF compilados en LaTeX
 
 <h2>Comentarios al profesor</h2>
 
-Este es el único sitio de tu entrega en el que debes poner comentarios "al profesor" (en otros sitios, se trataría de comentarios "al desarrollador" o "al cliente"). ¡Aprovecha"
+La plantilla no es completamente navegable pero se puede hacer una idea de como se va a estructurar. En la página principal aparece información sobre la siguiente ruta que va a hacer 
+el cliente según la fecha que la identifique y se muestra en gmaps.js. El diseño de la base de datos está a medio implementar en el código.
 
+Para el seguimiento de la práctica, ver commit 
 <h2>Vistas</h2>
 
 Detalla aquí tus vistas. Usa enlaces a localhost:8080/ (SIN nombre de proyecto; correspondientes a arrancar la aplicación en modo spring-boot desde STS) para enlazar cada vista.
 <ul>
-    <li><a href="localhost:8080/">vista principal</a> - descripción muy corta de la vista
+    <li><a href="localhost:8080/">vista principal</a> - Muestra la próxima ruta a realizar y e mapa con la misma
+    <li><a href="localhost:8080/visita">Ver visita</a> - Muestra los detalles de una sola visita
+    <li><a href="localhost:8080/crear_visita">Crear visita</a> - formulario de creación de una visita
+    <li><a href="localhost:8080/administrar">Administracion rutas y visitas</a> - en esta página se podrá ver con gáficos las zonas más visitadas y los eventos más descargados.
 </ul>
 
 <h2>Recursos</h2>
 
-Esto es un listado de todos los recursos externos utilizados (es decir: no escritos por los desarrolladors ni incluidos en la plantilla del profesor).
-
+Los recursos que voy a utilizar son:
 <ul>
-    <li><a href="localhost:8080/spring.jpg">imagen de primavera</a> (<a href="https://en.wikipedia.org/wiki/Spring_(season)#/media/File:Camino_entre_el_bosque_de_cerezos_en_flor.jpg">
-            CC-BY-SA</a>) - usada para logotipo
+    <li> <a href="#">gmaps.js</a> - Librería para mostrar rutas de mapas, obtener direcciones y obtener coordenadas.
     <li><a href="https://code.jquery.com/jquery-3.1.1.min.js">JQuery</a> (<a href="https://jquery.org/license/">MIT/Apache</a>) - librería js para simplificar la aplicación de comportamientos		
+   <li><a href="https://davidshimjs.github.io/qrcodejs/">qrcode.js</a> - librería para generar codigos qr
+   <li><a href="http://manuels.github.io/texlive.js/">texlive.js</a> - liberia para compilar el código latex y generar los pdfs
 </ul>
 </body>
 </html>
