actualizando leeme.html con el commit a corregir

--- a/leeme.html
+++ b/leeme.html
@@ -21,7 +21,8 @@ códigos QR y poder generar y descargar detalladamente PDF compilados en LaTeX
 La plantilla no es completamente navegable pero se puede hacer una idea de como se va a estructurar. En la página principal aparece información sobre la siguiente ruta que va a hacer 
 el cliente según la fecha que la identifique y se muestra en gmaps.js. El diseño de la base de datos está a medio implementar en el código.
 
-Para el seguimiento de la práctica, ver commit 
+Para el seguimiento de la práctica, ver commit 042a077
+
 <h2>Vistas</h2>
 
 Detalla aquí tus vistas. Usa enlaces a localhost:8080/ (SIN nombre de proyecto; correspondientes a arrancar la aplicación en modo spring-boot desde STS) para enlazar cada vista.
