Añadiendo detalles de librerias en el leeme.hmtl

--- a/leeme.html
+++ b/leeme.html
@@ -14,7 +14,7 @@
 <h2>Proyecto</h2>
 
 OngO es una web para gestionar tus rutas: visitas a tus clientes, a museos, rutas turísticas compartidas con amigos, todo esto y mas con las facilidades de escanear los destinos con 
-códigos QR y poder generar y descargar detalladamente PDF compilados en LaTeX
+códigos QR y poder generar y descargar detalladamente PDF compilados en LaTeX con los mapas de Google.
 
 <h2>Comentarios al profesor</h2>
 
