añadiendo esquema de la base de datos

--- a/leeme.html
+++ b/leeme.html
@@ -42,5 +42,7 @@ Los recursos que voy a utilizar son:
    <li><a href="https://davidshimjs.github.io/qrcodejs/">qrcode.js</a> - librería para generar codigos qr
    <li><a href="http://manuels.github.io/texlive.js/">texlive.js</a> - liberia para compilar el código latex y generar los pdfs
 </ul>
+
+<img src="schema.png">
 </body>
 </html>
