Añadiendo enlace al repositorio

--- a/leeme.html
+++ b/leeme.html
@@ -17,12 +17,16 @@ OngO es una web para gestionar tus rutas: visitas a tus clientes, a museos, ruta
 códigos QR y poder generar y descargar detalladamente PDF compilados en LaTeX con los mapas de Google.
 
 <h2>Comentarios al profesor</h2>
-
+<p>
 La plantilla no es completamente navegable pero se puede hacer una idea de como se va a estructurar. En la página principal aparece información sobre la siguiente ruta que va a hacer 
 el cliente según la fecha que la identifique y se muestra en gmaps.js. El diseño de la base de datos está a medio implementar en el código.
-
+</p>
+<p>
 Para el seguimiento de la práctica, ver commit 042a077
-
+</p>
+<p>
+El desarrollo del proyecto se puede seguir en el siguiente <a href="https://github.com/javimv36/iw-base">repositorio</a>.
+</p>
 <h2>Vistas</h2>
 
 Detalla aquí tus vistas. Usa enlaces a localhost:8080/ (SIN nombre de proyecto; correspondientes a arrancar la aplicación en modo spring-boot desde STS) para enlazar cada vista.
