--- a/leeme.html
+++ b/leeme.html
@@ -51,5 +51,8 @@ Los recursos que voy a utilizar son:
 </ul>
 
 <img src="schema.png">
+<img src="home.png">
+<img src="pdf.png">
+
 </body>
 </html>
